--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <p>{{movie.original_title}}</p>
                 <!-- <p><span :class="`flag-icon flag-icon-gr}`"></span></p> -->
                 <p><span class="flag-icon" v-bind:class="`flag-icon-${mapFlagIco(movie)}`"></span></p>
-
-                <!-- stampa le stelle piene e vuote in base a vote_average -->
-                <span class="fa-star" v-for="star in getMovieStars(movie)"
-                    :class="{'fa': star === true, 'far': star === false}"></span>
+                <p>{{movie.vote_average}}</p>
+                <!-- stampa le stelle piene ".fa-star" e vuote ".fa-star-o" in base a vote_average -->
+                <span class="fa" v-for="star in getMovieStars(movie)"
+                    :class="{'fa-star': star === true, 'fa-star-o': star === false}"></span>
 
 
             </li>
